@@ -1,0 +1,2 @@
+:auto_ids: true
+:input: kramdown
