@@ -18,6 +18,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * automatically set idprefix, if necessary, based on value of :auto_id_prefix option when :auto_ids options is set (#16)
 * don't modify value of :attributes option passed to `convert` and `convert_file` API methods
 * define ID containing a dot using longhand attribute assignment (#59)
+* extract raw text consistently regardless of input flavor (#56)
 
 === Fixed
 
